# options-scanner

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  run.sh
python/: backtest.py  chart_render.py  pattern_backtest.py  patterns.py  patterns_cli.py  pyproject.toml  scanner.py  test_patterns.py  universe.py
src/: broker.rs  executor.rs  main.rs  risk.rs  scheduler.rs  sim.rs  state.rs
static/: index.html
