[package]
name = "options-scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[[bin]]
name = "options-scanner"
path = "src/main.rs"

[[bin]]
# Stdio MCP server. Lets Claude Code / ChatGPT / Cursor consume our scanner,
# back-test, and risk state as MCP tools — so an LLM agent (the one that's
# also talking to Robinhood's agentic-trading MCP) can use our signals
# alongside Robinhood's execution tools.
name = "options-scanner-mcp"
path = "src/bin/mcp_server.rs"

[profile.release]
lto = "thin"
codegen-units = 1
