[project]
name = "scanner"
version = "0.1.0"
description = "Polars-based options play scanner"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.12",
    "yfinance>=0.2.50",
    "pandas>=2.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
