[project]
name = "scanner"
version = "0.1.0"
description = "Polars-based options play scanner"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.12",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    # Polars requires pyarrow when converting pandas frames with nullable dtypes
    # (yfinance returns Int64 volume columns under newer pandas versions).
    "pyarrow>=15.0",
    # Candlestick rendering for the LLM-vision second-opinion layer.
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
